src/assets/scss/application.scss
$govuk-assets-path: "/public/";

@import "../../../node_modules/govuk-frontend/dist/govuk/all";
@import "../../../node_modules/hmpo-components/all";
@import "../../../node_modules/@govuk-one-login/frontend-language-toggle/stylesheet/styles";

@import "../components/button-spinner";

// repainting the notification banner red for a warning state on the passport CRI [PYIC-1563]

.govuk-notification-banner.passport-message {
  border: $govuk-border-width solid $govuk-error-colour;
  background-color: $govuk-error-colour;
}

@import "../../../node_modules/@govuk-one-login/frontend-ui/build/all";

//// Task list pattern
//
//.app-task-list {
//  list-style-type: none;
//  padding-left: 0;
//  margin-top: 0;
//  margin-bottom: 0;
//  @include govuk-media-query($from: tablet) {
//    min-width: 550px;
//  }
//}
//
//.app-task-list__section {
//  display: table;
//  @include govuk-font($size:24, $weight: bold);
//}
//
//.app-task-list__section-number {
//  display: table-cell;
//
//  @include govuk-media-query($from: tablet) {
//    min-width: govuk-spacing(6);
//    padding-right: 0;
//  }
//}
//
//.app-task-list__items {
//  @include govuk-font($size: 19);
//  @include govuk-responsive-margin(9, "bottom");
//  list-style: none;
//  padding-left: 0;
//  @include govuk-media-query($from: tablet) {
//    padding-left: govuk-spacing(6);
//  }
//}
//
//.app-task-list__item {
//  border-bottom: 1px solid $govuk-border-colour;
//  margin-bottom: 0 !important;
//  padding-top: govuk-spacing(2);
//  padding-bottom: govuk-spacing(2);
//  @include govuk-clearfix;
//}
//
//.app-task-list__item:first-child {
//  border-top: 1px solid $govuk-border-colour;
//}
//
//.app-task-list__task-name {
//  display: block;
//  @include govuk-media-query($from: 450px) {
//    float: left;
//  }
//}
//
//// The `app-task-list__task-completed` class was previously used on the task
//// list for the completed tag (changed in 86c90ec) – it's still included here to
//// avoid breaking task lists in existing prototypes.
//.app-task-list__tag,
//.app-task-list__task-completed {
//  margin-top: govuk-spacing(2);
//  margin-bottom: govuk-spacing(1);
//
//  @include govuk-media-query($from: 450px) {
//    float: right;
//    margin-top: 0;
//    margin-bottom: 0;
//  }
//}

